# pocketpaw

./: README.md  pyproject.toml
client/src-tauri/: tauri.conf.json
client/src-tauri/src/: commands.rs
docs/: docs-config.json
docs/_landing/: index.html
installer/: install.sh  installer.py
src/pocketclaw/: config.py  dashboard.py
src/pocketclaw/agents/: claude_sdk.py  loop.py  pocketpaw_native.py
src/pocketclaw/bootstrap/: context_builder.py
src/pocketclaw/frontend/: index.html.deprecated
src/pocketclaw/frontend/css/: styles.css
src/pocketclaw/frontend/js/: app.js
src/pocketclaw/frontend/templates/: base.html
src/pocketclaw/frontend/templates/components/: activity.html  chat.html  modals.html  sidebar.html  terminal.html
src/pocketclaw/frontend/templates/components/modals/: audit.html  file_browser.html  identity.html  intentions.html  memory.html  reminders.html  remote.html  screenshot.html  settings.html  skills.html
src/pocketclaw/memory/: file_store.py  manager.py
src/pocketclaw/tools/: cli.py  policy.py
src/pocketclaw/tools/builtin/: __init__.py  memory.py
src/pocketpaw/: dashboard_ws.py
src/pocketpaw/agents/: backend.py  codex_cli.py  copilot_sdk.py  google_adk.py  loop.py  openai_agents.py  opencode.py
src/pocketpaw/bootstrap/: protocol.py
src/pocketpaw/bus/adapters/: telegram_adapter.py
src/pocketpaw/frontend/js/features/: reminders.js
src/pocketpaw/frontend/templates/components/modals/: reminders.html
src/pocketpaw/memory/: file_store.py
tests/: test_agent_loop.py  test_backend_protocol.py  test_bootstrap.py  test_credentials.py  test_file_memory_fixes.py  test_headless_permissions.py  test_identity_api.py  test_integration_headless.py  test_session_index.py  test_telegram_adapter.py  test_tool_policy.py
tests/e2e/: test_security.py
